[project]
name = "agent-example"
version = "0.1.0"
description = "A collection of Python scripts for web scraping, data processing, and Slack bot functionality"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pandas",
    "slack-sdk",
    "slack-bolt",
    "python-dotenv",
    "flask",
    "langchain"
]
